Seperate application logic in app.ts into main.ts and app.module.ts.
#12552 - As a developer, I will have Implement frontend for multi-provider adding feature

--- a/client/index.html
+++ b/client/index.html
@@ -89,7 +89,7 @@
         <!-- Configure System.js, our module loader -->
         <script src="resources/systemjs.config.js"></script>
         <script>
-            System.import('app_ts/app')
+            System.import('app_ts/main')
                 .then(null, console.error.bind(console));
         </script>
     </body>
