--- a/client/app/provider/directives/providerLookupResult.html
+++ b/client/app/provider/directives/providerLookupResult.html
@@ -4,91 +4,8 @@
             <div class="alert alert-danger">Sorry, no results found.</div>
         </div>
     </div>
-<!-- NEW -->
     <div class="row">
-        <div class="col-sm-6 col-sm-push-6">
-            <div class="ibox panel panel-darkblue">
-                <div class="ibox-title modified panel-heading">
-                    <h2 class="font-light">Selections to Add</h2>
-                </div>
-                <div class="panel-body">
-
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <table class="table table-bordered table-striped table-hover">
-                                <thead>
-                                    <tr>
-                                        <td></td>
-                                        <th>Name/Facility</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>
-                                            <span class="sr-only">empty table cell</span>
-                                        </td>
-                                        <td>
-                                            <span>No Providers currently selected.</span>
-                                        </td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <table class="table table-bordered table-striped table-hover">
-                                <thead>
-                                <tr>
-                                    <td></td>
-                                    <th>Name/Facility</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr>
-                                    <td>
-                                        <button type="button" class="btn btn-xs btn-red">
-                                            <div class="fa fa-minus">
-                                                <span class="sr-only">delete provider</span>
-                                                <span class="sr-only"></span>
-                                                <span class="sr-only"></span>
-                                            </div>
-                                        </button>
-                                    </td>
-                                    <td>
-                                        <span>FISHKIN CENTER FOR BACK AND BODY WELLNESS, LLC</span>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td>
-                                        <button type="button" class="btn btn-xs btn-red">
-                                            <div class="fa fa-minus">
-                                                <span class="sr-only">delete provider</span>
-                                                <span class="sr-only"></span>
-                                                <span class="sr-only"></span>
-                                            </div>
-                                        </button>
-                                    </td>
-                                    <td>
-                                        <span>DRS. GOLDBAUM AND ROSENBERG</span>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="row m-b-sm">
-                        <div class="col-sm-12">
-                            <button class="btn btn-sm btn-primary dark-green">Add to Provider List</button>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </div>
-
+        <c2s-provider-multi-adding></c2s-provider-multi-adding>
         <div class="col-sm-6 col-sm-pull-6">
             <div class="ibox panel panel-darkblue">
                 <div class="ibox-title modified panel-heading">
@@ -222,76 +139,5 @@
                 </div>
             </div>
         </div>
-
     </div>
-<!-- End NEW -->
-
-    <!--<div class="row">-->
-
-        <!--<div class="col-md-6" ng-if="!providerLookupResultVm.isEmptyResult()">-->
-            <!--<div class="panel panel-darkblue">-->
-                <!--<div class="ibox-title modified panel-heading">-->
-                    <!--<h2>Results</h2>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="row">-->
-        <!--<div class="col-md-6" ng-if="!providerLookupResultVm.isEmptyResult()">-->
-            <!--<div class="text-center">-->
-                <!--<pagination total-items="providerLookupResultVm.pagination.totalItems"-->
-                            <!--items-per-page="providerLookupResultVm.pagination.itemsPerPage"-->
-                            <!--ng-model="providerLookupResultVm.pagination.currentPage"-->
-                            <!--ng-change="providerLookupResultVm.loadPage()"-->
-                            <!--max-size="providerLookupResultVm.pagination.maxSize"-->
-                            <!--class="pagination-sm"-->
-                            <!--boundary-links="true"></pagination>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="row">-->
-        <!--<div class="col-md-6" ng-if="!providerLookupResultVm.isEmptyResult()">-->
-            <!--<div class="panel panel-default"-->
-                 <!--ng-repeat="provider in providerLookupResultVm.providerLookupResult.providers">-->
-                <!--<div class="panel-heading">-->
-                    <!--<h3>{{provider | plsName}}&nbsp;<span>[NPI: {{provider.npi}}]</span></h3>-->
-                    <!--<button type="button" class="btn btn-xs btn-primary dark-green"-->
-                            <!--ng-click="providerLookupResultVm.addProvider(provider.npi)"-->
-                            <!--ng-disabled="providerLookupResultVm.isProviderAlreadyAdded(provider.npi)">-->
-                        <!--<i class="fa fa-plus">-->
-                            <!--<span class="sr-only">Add Provider</span>-->
-                        <!--</i>-->
-                    <!--</button>-->
-                    <!--<div class="inline" ng-if="!providerLookupResultVm.isProviderAlreadyAdded(provider.npi)">&nbsp;Add-->
-                        <!--this Provider.-->
-                    <!--</div>-->
-                    <!--<div class="inline" ng-if="providerLookupResultVm.isProviderAlreadyAdded(provider.npi)">&nbsp;Provider-->
-                        <!--already-->
-                        <!--added.-->
-                    <!--</div>-->
-                <!--</div>-->
-                <!--<div class="panel-body">-->
-                    <!--<p>{{provider.healthcareProviderTaxonomy_1}}</p>-->
-
-                    <!--<p>{{provider | plsAddress}}</p>-->
-
-                    <!--<p>{{provider.providerBusinessPracticeLocationAddressTelephoneNumber | phone}}</p>-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--<div class="row">-->
-        <!--<div class="col-md-6" ng-if="!providerLookupResultVm.isEmptyResult()">-->
-            <!--<div class="text-center">-->
-                <!--<pagination total-items="providerLookupResultVm.pagination.totalItems"-->
-                            <!--items-per-page="providerLookupResultVm.pagination.itemsPerPage"-->
-                            <!--ng-model="providerLookupResultVm.pagination.currentPage"-->
-                            <!--ng-change="providerLookupResultVm.loadPage()"-->
-                            <!--max-size="providerLookupResultVm.pagination.maxSize"-->
-                            <!--class="pagination-sm"-->
-                            <!--boundary-links="true"></pagination>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-
 </div>
