Integrate c2s modal component with the multi-provider adding.
#12670 - C2S v2 :: Patient Portal :: PLS :: Search Results Do Not Change When Switching Pages of Resuts

--- a/client/app/provider/directives/providerLookupResult.html
+++ b/client/app/provider/directives/providerLookupResult.html
@@ -5,7 +5,9 @@
         </div>
     </div>
     <div class="row">
-        <c2s-provider-multi-adding></c2s-provider-multi-adding>
+
+        <c2s-provider-multi-adding [providers]="providerLookupResultVm.selectedProvidersNpi"></c2s-provider-multi-adding>
+
         <div class="col-sm-6 col-sm-pull-6">
             <div class="ibox panel panel-darkblue">
                 <div class="ibox-title modified panel-heading">
