--- a/client/app/consent/directives/consentCard.html
+++ b/client/app/consent/directives/consentCard.html
@@ -1,74 +1,86 @@
+<!-- Dynamic IDs Panel-Group ID, data-target ID, panel-collapse panel-body ID -->
 <div class="row">
-    <div class="col-lg-12 relative">
-        <div class="ibox panel panel-navbar-blueGray float-e-margins">
-            <div class="ibox-title modified panel-heading right-padding30" ng-click="consentCardVm.toggleCollapse()">
-                <div class="chevron_absolute">
-                    <div c2s-ibox-tools c2s-collapsed="consentCardVm.collapsed"
-                         c2s-chevron-prevent-default="true"></div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-4 col-sm-push-8 col-xs-12">
-                        <p class="">Effective Dates: <strong><span
-                                ng-bind="(consentCardVm.consent.consentStart | date) + ' - ' + (consentCardVm.consent.consentEnd | date)"></span></strong>
-                        </p>
+    <div class="col-lg-12">
+        <div class="panel-group" id="accordion">
+            <div class="panel panel-navbar-blueGray">
+                <div class="panel-heading right-padding30" data-toggle="collapse" data-parent="#accordion" data-target="#collapseOne">
+                    <!--<div class="panel-heading right-padding30" ng-click="consentCardVm.toggleCollapse()">-->
+                    <div class="chevron_absolute">
+                        <i class="indicator fa fa-chevron-up"></i>
                     </div>
-                    <div class="col-sm-8 col-sm-pull-4 col-xs-12">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <p class="m-b-xxs">Authorized to share:
-                                </p>
-                                <p><strong><span ng-repeat="discloseName in consentCardVm.consent.toDiscloseName"
-                                                 ng-bind="discloseName"></span></strong>
-                                </p>
+                    <div class="panel-title">
+                        <a class="accordion-toggle">
+                            <div class="row">
+                                <div class="col-sm-4 col-sm-push-8 col-xs-12">
+                                    <p class="">Effective Dates: <strong><span
+                                            ng-bind="(consentCardVm.consent.consentStart | date) + ' - ' + (consentCardVm.consent.consentEnd | date)"></span></strong>
+                                    </p>
+                                </div>
+                                <div class="col-sm-8 col-sm-pull-4 col-xs-12">
+                                    <div class="row">
+                                        <div class="col-sm-6">
+                                            <p class="m-b-xxs">Authorized to share:
+                                            </p>
+                                            <p><strong><span
+                                                    ng-repeat="discloseName in consentCardVm.consent.toDiscloseName"
+                                                    ng-bind="discloseName"></span></strong>
+                                            </p>
+                                        </div>
+                                        <div class="col-sm-6">
+                                            <p class="m-b-xxs">Sharing with:</p>
+                                            <p><strong><span
+                                                    ng-repeat="madeToName in consentCardVm.consent.isMadeToName"
+                                                    ng-bind="madeToName"></span></strong>
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-sm-6">
-                                <p class="m-b-xxs">Sharing with:</p>
-                                <p><strong><span ng-repeat="madeToName in consentCardVm.consent.isMadeToName"
-                                                 ng-bind="madeToName"></span></strong>
-                                </p>
-                            </div>
-                        </div>
+                        </a>
                     </div>
                 </div>
-            </div>
-            <div class="ibox-content modified">
-                <div class="row">
-                    <div class="col-md-6 m-b">
-                        <div ng-if="consentCardVm.isShareAll()">
-                            <div class="font-size16 bold m-b-sm border-bottom-blue"><span class="m-r-xs"><i
-                                    class="fa fa-eye"></i></span>Sharing all medical information:
-                            </div>
-                            All my medical information can be shared.
-                        </div>
-                        <div ng-if="!consentCardVm.isShareAll()">
-                            <div class="font-size16 bold m-b-sm border-bottom-red"><span class="m-r-xs"><i
-                                    class="fa fa-eye-slash"></i></span>Medical Information NOT disclosed:
-                            </div>
 
-                            <p><span ng-bind="consentCardVm.notDisclosedItems()"></span></p>
+                <div id="collapseOne" class="panel-collapse collapse">
+                    <div class="panel-body">
+                    <div class="row">
+                        <div class="col-md-6 m-b">
+                            <div ng-if="consentCardVm.isShareAll()">
+                                <div class="font-size16 bold m-b-sm border-bottom-blue"><span class="m-r-xs"><i
+                                        class="fa fa-eye"></i></span>Sharing all medical information:
+                                </div>
+                                All my medical information can be shared.
+                            </div>
+                            <div ng-if="!consentCardVm.isShareAll()">
+                                <div class="font-size16 bold m-b-sm border-bottom-red"><span class="m-r-xs"><i
+                                        class="fa fa-eye-slash"></i></span>Medical Information NOT disclosed:
+                                </div>
+
+                                <p><span ng-bind="consentCardVm.notDisclosedItems()"></span></p>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md-6 m-b">
-                        <div class="font-size16 bold m-b-sm border-bottom-blue"><span class="m-r-xs"><i
-                                class="fa fa-eye"></i></span>Share for following purposes:
+                        <div class="col-md-6 m-b">
+                            <div class="font-size16 bold m-b-sm border-bottom-blue"><span class="m-r-xs"><i
+                                    class="fa fa-eye"></i></span>Share for following purposes:
+                            </div>
+                            <p><span ng-bind="consentCardVm.purposeOfUseItems()"></span></p>
                         </div>
-                        <p><span ng-bind="consentCardVm.purposeOfUseItems()"></span></p>
                     </div>
                 </div>
-            </div>
-            <div class="panel-footer">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <div class="left-padding25"
-                             ng-class="{'statusIcon_saved': consentCardVm.consentState('In Progress'),'statusIcon_signed': consentCardVm.consentState('Signed'),'statusIcon_revoked': consentCardVm.consentState('Revoked')}">
+                </div>
+                <div class="panel-footer">
+                    <div class="row">
+                        <div class="col-xs-12">
+                            <div class="left-padding25"
+                                 ng-class="{'statusIcon_saved': consentCardVm.consentState('In Progress'),'statusIcon_signed': consentCardVm.consentState('Signed'),'statusIcon_revoked': consentCardVm.consentState('Revoked')}">
                             <span> Consent State: <span class="bold"
                                                         ng-bind="consentCardVm.consentState('') | uppercase"></span></span>
-                            <span class="pull-right">
+                                <span class="pull-right">
                                 <button class="btn btn-primary btn-xs dark-green" type="button"
                                         ng-click="consentCardVm.openManageConsentModal()">Manage
                                     Consent
                                 </button>
                             </span>
+                            </div>
                         </div>
                     </div>
                 </div>
