--- a/client/app/provider/directives/providerLookupResult.html
+++ b/client/app/provider/directives/providerLookupResult.html
@@ -6,7 +6,7 @@
     </div>
     <div class="row">
 
-        <c2s-provider-multi-adding [providers]="providerLookupResultVm.selectedProvidersNpi"></c2s-provider-multi-adding>
+        <c2s-provider-multi-adding [providers]="providerLookupResultVm.selectedProviders"></c2s-provider-multi-adding>
 
         <div class="col-sm-6 col-sm-pull-6">
             <div class="ibox panel panel-darkblue">
