Implement maintaining selected providers across pagination
#12552 - As a developer, I will have Implement frontend for multi-provider adding feature

--- a/client/app/provider/directives/providerLookupSearch.html
+++ b/client/app/provider/directives/providerLookupSearch.html
@@ -271,5 +271,7 @@
 
     <c2s-provider-lookup-result ng-if="providerLookupSearchVm.providerLookupResult"
                                 provider-lookup-result="providerLookupSearchVm.providerLookupResult"
-                                query-parameters="providerLookupSearchVm.plsQueryParameters"></c2s-provider-lookup-result>
+                                query-parameters="providerLookupSearchVm.plsQueryParameters"
+                                selected-providers="providerLookupSearchVm.selectedProviders">
+    </c2s-provider-lookup-result>
 </div>
