--- a/client/app/account/controllers/securityLogin.html
+++ b/client/app/account/controllers/securityLogin.html
@@ -9,14 +9,11 @@
                                  alt="loginVm.altLogoText">
                             <span class="pull-right m-r-md m-t-xs">
                                 <span class="side-padding10">{{"HOME" | translate}}</span> <span>{{"ABOUT" | translate}}</span>
-                                <!--Select language - add by Wentao-->
+                                <!--Select language-->
                                 <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span translate="SELECT_LANGUAGE"></span><span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li>
                                         <a ng-click="changeLanguage('en-US')" translate="BUTTON_LANG_EN"></a>
-                                    </li>
-                                    <li>
-                                        <a ng-click="changeLanguage('zh-CN')" translate="BUTTON_LANG_ZH"></a>
                                     </li>
                                     <li>
                                         <a ng-click="changeLanguage('es-AR')" translate="BUTTON_LANG_ES"></a>
