Improve user messages on Provider Look up Search results
#12892:As a developer, I will have released internationalization (Spanish) C2S version 2.1.1

--- a/client/app/provider/directives/providerLookupResult.html
+++ b/client/app/provider/directives/providerLookupResult.html
@@ -52,11 +52,11 @@
                                     <h3 class="m-b-sm">{{provider | plsName}}&nbsp;<span>[NPI: {{provider.npi}}]</span></h3>
                                     <button type="button" class="btn btn-xs white" >
                                         <i class="fa fa-plus">
-                                            <span class="sr-only">{{"PROVIDER_MANAGEMENT.PROVIDER_LOOKUP_5" | translate}}</span>
+                                            <span class="sr-only">{{"PROVIDER_MANAGEMENT.PROVIDER_LOOKUP_5A" | translate}}</span>
                                         </i>
                                     </button>
                                     <div class="inline text-dark-gray" >
-                                        &nbsp;{{"PROVIDER_MANAGEMENT.PROVIDER_LOOKUP_5" | translate}}
+                                        &nbsp;{{"PROVIDER_MANAGEMENT.PROVIDER_LOOKUP_5A" | translate}}
                                     </div>
                                 </div>
                                 <div class="panel-heading" ng-if="providerLookupResultVm.isProviderAdded(provider.npi)">
